# pdf-scanning-service

./: .gitignore  README.md  pdf-ocr-service.toml  pyproject.toml
pdf_ocr_service/: __init__.py  celery.py
pdf_ocr_service/configula/: __init__.py  configula.py  pdf_ocr_config.py
pdf_ocr_service/factory/: app_factory.py
pdf_ocr_service/jobs/: tasks.py
pdf_ocr_service/jobs/db/: __init__.py  database.py  db_utils.py  models.py
pdf_ocr_service/jobs/domains/: __init__.py  document_embedding_token.py  document_image_task_info.py  document_office_task_info.py  document_pdf_task_info.py  document_process_result.py  document_task_info.py  token_postion.py
pdf_ocr_service/jobs/extractors/: __init__.py  base_pdf_extractor.py  composite_pdf_extractor.py  ocr_pymupdf_extractor.py  pdfplumber_extractor.py  pymupdf_extractor.py  pypdf_extractor.py
pdf_ocr_service/jobs/processors/: __init__.py  base_processor.py  (+4 more)
pdf_ocr_service/utils/: config_utils.py
releases/: V1.0.adoc  V2.0.adoc
tests/: pdf-ocr-service.toml
tests/config/: test_configula.py
tests/domains/: token_position_test.py
tests/extractors/: test_composite_pdf_extractor.py  test_ocr_extractor.py  test_pdfplumber.py  test_pymupdf.py  test_pypdf.py
tests/processors/: test_ocr.py  test_ocr_pdf_task_info.py  test_processor.py
tests/storage/: test_minio.py  test_mino_storage.py  test_s3_storage.py
tests/transports/: test_kombu.py  test_search_config.py
tests/utils/: celery_log_test.py  kwargs_test.py  pandas_test.py  sorted_test.py  test_db.py  test_images.py  test_list.py  test_requests.py  test_str.py
(+7 files in other folders)
